[gd_scene load_steps=3 format=1]

[ext_resource path="res://LevelEditor.gd" type="Script" id=1]
[ext_resource path="res://Level.tscn" type="PackedScene" id=2]

[node name="LevelEditor" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Level" parent="." instance=ExtResource( 2 )]

[node name="SaveButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 652.0
margin/top = 76.0
margin/right = 693.0
margin/bottom = 96.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Save"
flat = false

[node name="LoadButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 705.0
margin/top = 76.0
margin/right = 747.0
margin/bottom = 96.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Load"
flat = false

[node name="NameEdit" type="LineEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 652.0
margin/top = 37.0
margin/right = 748.0
margin/bottom = 61.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="SpawnPieceSelection" type="OptionButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 652.0
margin/top = 139.0
margin/right = 755.0
margin/bottom = 159.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Pawn"
flat = false
align = 0
selected = 0
items = [ "Pawn", null, false, -1, null, "Bishop", null, false, -1, null, "Rook", null, false, -1, null, "Knight", null, false, -1, null, "King", null, false, -1, null, "Queen", null, false, -1, null, "Block", null, false, -1, null ]

[node name="SpawnPieceButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 765.0
margin/top = 139.0
margin/right = 818.0
margin/bottom = 159.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Create"
flat = false

[node name="BoardSizeXBox" type="SpinBox" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 649.0
margin/top = 172.0
margin/right = 723.0
margin/bottom = 196.0
range/min = 1.0
range/max = 20.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="BoardSizeYBox" type="SpinBox" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 733.0
margin/top = 172.0
margin/right = 807.0
margin/bottom = 196.0
range/min = 1.0
range/max = 20.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="ResizeButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 819.0
margin/top = 173.0
margin/right = 873.0
margin/bottom = 193.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Resize"
flat = false

[node name="Button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 652.0
margin/top = 6.0
margin/right = 758.0
margin/bottom = 26.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Check Solution"
flat = false

[node name="DescriptionEdit" type="TextEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 647.0
margin/top = 207.0
margin/right = 872.0
margin/bottom = 372.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="ClearButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 828.0
margin/top = 139.0
margin/right = 872.0
margin/bottom = 159.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Clear"
flat = false

[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]

[connection signal="pressed" from="LoadButton" to="." method="_on_LoadButton_pressed"]

[connection signal="pressed" from="SpawnPieceButton" to="." method="_on_SpawnPieceButton_pressed"]

[connection signal="pressed" from="ResizeButton" to="." method="_on_ResizeButton_pressed"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="text_changed" from="DescriptionEdit" to="." method="_on_DescriptionEdit_text_changed"]

[connection signal="pressed" from="ClearButton" to="." method="_on_ClearButton_pressed"]


